compiler/tools/fpp-check/test/state_machine/types/enum_undef_type.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/state_machine/types/enum_undef_type.fpp:2.12
  enum E : T { X }
           ^
error: symbol T is not defined
note: looking for a type here
